--- a/ScPlums/ScPlums.csproj
+++ b/ScPlums/ScPlums.csproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <None Include="App_Config\Include\ScPlums.config" />
     <None Include="packages.config" />
+    <None Include="ScPlums.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
