--- a/ScPlums/ScPlums.nuspec
+++ b/ScPlums/ScPlums.nuspec
@@ -9,11 +9,11 @@
     <projectUrl>https://github.com/whyleee/ScPlums</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>- Added css grid support for page editor components</releaseNotes>
+    <releaseNotes>- Fixed config transformation order</releaseNotes>
     <copyright>Copyright © Pavel Nezhencev (Creuna) 2014</copyright>
     <tags>Sitecore CMS fixes improvements</tags>
   </metadata>
   <files>
-    <file src="App_Config\Include\ScPlums.config" target="content\App_Config\Include"/>
+    <file src="App_Config\Include\SitecorePatch.ScPlums.config" target="content\App_Config\Include"/>
   </files>
 </package>
