Added page editor fix for News Mover plugin (redirect user after item moved)

--- a/ScPlums/App_Config/Include/SitecorePatch.ScPlums.config
+++ b/ScPlums/App_Config/Include/SitecorePatch.ScPlums.config
@@ -10,6 +10,11 @@
       <getChromeData>
         <processor type="ScPlums.Grid.Pipelines.SetStaticRowPlaceholderKey, ScPlums" patch:before="processor[@type='Sitecore.Pipelines.GetChromeData.GetPlaceholderChromeData, Sitecore.Kernel']"/>
       </getChromeData>
+      
+      <!-- NewsMover page editor fix -->
+      <NewsMover.MoveCompleted>
+        <processor type="ScPlums.Fixes.NewsMover.RedirectWebEdit, ScPlums" />
+      </NewsMover.MoveCompleted>
     </pipelines>
   </sitecore>
 </configuration>
