--- a/ScPlums/App_Config/Include/SitecorePatch.ScPlums.config
+++ b/ScPlums/App_Config/Include/SitecorePatch.ScPlums.config
@@ -1,5 +1,8 @@
 ﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
   <sitecore>
+    <commands>
+      <command name="webedit:clearlink" type="ScPlums.WebEdit.Commands.ClearLink, ScPlums" />
+    </commands>
     <pipelines>
       <mvc.renderPlaceholder>
         <processor type="ScPlums.Grid.Pipelines.PerformPlaceholderRendering, ScPlums" patch:instead="processor[@type='Sitecore.Mvc.Pipelines.Response.RenderPlaceholder.PerformRendering, Sitecore.Mvc']"/>
