--- a/ScPlums/ScPlums.csproj
+++ b/ScPlums/ScPlums.csproj
@@ -34,6 +34,9 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
+    <Reference Include="Sitecore.Client">
+      <HintPath>..\vendor\Sitecore.7.2.140526\Sitecore.Client.dll</HintPath>
+    </Reference>
     <Reference Include="Sitecore.Kernel">
       <HintPath>..\vendor\Sitecore.7.2.140526\Sitecore.Kernel.dll</HintPath>
     </Reference>
@@ -82,9 +85,12 @@
     <Compile Include="Grid\RowPlaceholderHelper.cs" />
     <Compile Include="Initializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebEdit\Commands\ClearLink.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App_Config\Include\SitecorePatch.ScPlums.config" />
+    <None Include="App_Data\serialization\core\sitecore\system\Field types\Link Types\General Link with Search\WebEdit Buttons\Clear Link.item" />
+    <None Include="App_Data\serialization\core\sitecore\system\Field types\Link Types\General Link\WebEdit Buttons\Clear Link.item" />
     <None Include="packages.config" />
     <None Include="ScPlums.nuspec" />
   </ItemGroup>
