Added customized field editor (correct params handling, new 'sections' and 'preserve-sections' params)

--- a/ScPlums/App_Config/Include/SitecorePatch.ScPlums.config
+++ b/ScPlums/App_Config/Include/SitecorePatch.ScPlums.config
@@ -2,6 +2,7 @@
   <sitecore>
     <commands>
       <command name="webedit:clearlink" type="ScPlums.WebEdit.Commands.ClearLink, ScPlums" />
+      <command name="webedit:customizedfieldeditor" type="ScPlums.WebEdit.Commands.CustomizedFieldEditor, ScPlums"/>
     </commands>
     <pipelines>
       <mvc.renderPlaceholder>
