--- a/ScPlums/ScPlums.csproj
+++ b/ScPlums/ScPlums.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Initializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebEdit\Commands\ClearLink.cs" />
+    <Compile Include="WebEdit\Commands\CustomizedFieldEditor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App_Config\Include\SitecorePatch.ScPlums.config" />
