--- a/ScPlums/App_Config/Include/SitecorePatch.ScPlums.config
+++ b/ScPlums/App_Config/Include/SitecorePatch.ScPlums.config
@@ -2,17 +2,20 @@
   <sitecore>
     <commands>
       <command name="webedit:clearlink" type="ScPlums.WebEdit.Commands.ClearLink, ScPlums" />
-      <command name="webedit:customizedfieldeditor" type="ScPlums.WebEdit.Commands.CustomizedFieldEditor, ScPlums"/>
+      <command name="webedit:customizedfieldeditor" type="ScPlums.WebEdit.Commands.CustomizedFieldEditor, ScPlums" />
     </commands>
     <pipelines>
+      <httpRequestBegin>
+        <processor type="ScPlums.Fixes.RedirectBackFromLoginPage, ScPlums" patch:after="processor[@type='Sitecore.Pipelines.HttpRequest.UserResolver, Sitecore.Kernel']" />
+      </httpRequestBegin>
       <mvc.renderPlaceholder>
-        <processor type="ScPlums.Grid.Pipelines.PerformPlaceholderRendering, ScPlums" patch:instead="processor[@type='Sitecore.Mvc.Pipelines.Response.RenderPlaceholder.PerformRendering, Sitecore.Mvc']"/>
+        <processor type="ScPlums.Grid.Pipelines.PerformPlaceholderRendering, ScPlums" patch:instead="processor[@type='Sitecore.Mvc.Pipelines.Response.RenderPlaceholder.PerformRendering, Sitecore.Mvc']" />
       </mvc.renderPlaceholder>
       <getPlaceholderRenderings>
-        <processor type="ScPlums.Grid.Pipelines.SetStaticRowPlaceholderKey, ScPlums" patch:before="processor[@type='Sitecore.Pipelines.GetPlaceholderRenderings.GetAllowedRenderings, Sitecore.Kernel']"/>
+        <processor type="ScPlums.Grid.Pipelines.SetStaticRowPlaceholderKey, ScPlums" patch:before="processor[@type='Sitecore.Pipelines.GetPlaceholderRenderings.GetAllowedRenderings, Sitecore.Kernel']" />
       </getPlaceholderRenderings>
       <getChromeData>
-        <processor type="ScPlums.Grid.Pipelines.SetStaticRowPlaceholderKey, ScPlums" patch:before="processor[@type='Sitecore.Pipelines.GetChromeData.GetPlaceholderChromeData, Sitecore.Kernel']"/>
+        <processor type="ScPlums.Grid.Pipelines.SetStaticRowPlaceholderKey, ScPlums" patch:before="processor[@type='Sitecore.Pipelines.GetChromeData.GetPlaceholderChromeData, Sitecore.Kernel']" />
       </getChromeData>
       
       <!-- NewsMover page editor fix -->
