--- a/ScPlums/ScPlums.csproj
+++ b/ScPlums/ScPlums.csproj
@@ -79,6 +79,7 @@
   <ItemGroup>
     <Compile Include="Fixes\Ie11UserAgentFixForSitecore.cs" />
     <Compile Include="Fixes\NewsMover\RedirectWebEdit.cs" />
+    <Compile Include="Fixes\RedirectBackFromLoginPage.cs" />
     <Compile Include="Grid\Pipelines\PerformPlaceholderRendering.cs" />
     <Compile Include="Grid\Pipelines\SetStaticRowPlaceholderKey.cs" />
     <Compile Include="Grid\GridModels.cs" />
