Added several sitecore file fixes and basic social icons

--- a/ScPlums/ScPlums.csproj
+++ b/ScPlums/ScPlums.csproj
@@ -95,8 +95,14 @@
     <None Include="App_Data\serialization\core\sitecore\system\Field types\Link Types\General Link\WebEdit Buttons\Clear Link.item" />
     <None Include="packages.config" />
     <None Include="ScPlums.nuspec" />
+    <None Include="sitecore\shell\Themes\Standard\Social.zip" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="sitecore\shell\Applications\Content Manager\FieldEditor.aspx" />
+    <Content Include="sitecore\shell\Applications\Install\Controls\Filters\ItemUserFilterEditor.xml" />
+    <Content Include="sitecore\shell\Applications\WebEdit\WebEditRibbon.aspx" />
+    <Content Include="sitecore\shell\Applications\WebEdit\WebEditRibbon.js" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
