--- a/ScPlums/ScPlums.nuspec
+++ b/ScPlums/ScPlums.nuspec
@@ -15,5 +15,7 @@
   </metadata>
   <files>
     <file src="App_Config\Include\SitecorePatch.ScPlums.config" target="content\App_Config\Include"/>
+    <file src="App_Data\**\*.*" target="content\App_Data"/>
+    <file src="sitecore\**\*.*" target="content\sitecore"/>
   </files>
 </package>
