--- a/ScPlums/ScPlums.nuspec
+++ b/ScPlums/ScPlums.nuspec
@@ -9,19 +9,7 @@
     <projectUrl>https://github.com/whyleee/ScPlums</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>- Fixed IE11 browser detection in Sitecore
-- Fixed page editor for News Mover plugin
-- Added clear link button to the page editor
-- Added customized field editor (correct params handling, new 'sections' and 'preserve-sections' params)
-- Added fix to redirect back from login page to the page editor
-- Fixed field editor header: now it's visible
-- Disabled item user filter in package designer because of constant NRE's
-- Fixed 'Delete page' button in the page editor
-- Fixed FireFox js-redirects in the page editor
-- Fixed page editor js-redirects after save
-- Added 4 social icons (Facebook, Twitter, Google+, LinkedIn)
-- Fixed Sitecore modal dialogs positioning in the page editor
-- Fixed Sitecore top ribbon position in the page editor</releaseNotes>
+    <releaseNotes>- Added updated content editor control to hide empty option for required list fields</releaseNotes>
     <copyright>Copyright © Pavel Nezhencev (Creuna) 2014</copyright>
     <tags>Sitecore CMS fixes improvements</tags>
   </metadata>
