Added droplink/droptree page editor support, datetime wrapped in the time tag

--- a/ScPlums/App_Config/Include/SitecorePatch.ScPlums.config
+++ b/ScPlums/App_Config/Include/SitecorePatch.ScPlums.config
@@ -17,6 +17,11 @@
       <getChromeData>
         <processor type="ScPlums.Grid.Pipelines.SetStaticRowPlaceholderKey, ScPlums" patch:before="processor[@type='Sitecore.Pipelines.GetChromeData.GetPlaceholderChromeData, Sitecore.Kernel']" />
       </getChromeData>
+      <renderField>
+        <processor type="ScPlums.WebEdit.Pipelines.GetWrappedInTimeTagDateFieldValue, ScPlums" patch:instead="processor[@type='Sitecore.Pipelines.RenderField.GetDateFieldValue, Sitecore.Kernel']" />
+        <processor type="ScPlums.WebEdit.Pipelines.GetDropLinkFieldValue, ScPlums" patch:before="processor[@type='Sitecore.Pipelines.RenderField.GetInternalLinkFieldValue, Sitecore.Kernel']" />
+        <processor type="ScPlums.WebEdit.Pipelines.GetDropTreeFieldValue, ScPlums" patch:before="processor[@type='Sitecore.Pipelines.RenderField.GetInternalLinkFieldValue, Sitecore.Kernel']" />
+      </renderField>
       
       <!-- NewsMover page editor fix -->
       <NewsMover.MoveCompleted>
